@@ -1,0 +1,2 @@
+This directory contains test configuration template files.
+Copy them to ~/.clustershell/tests/ or /etc/clustershell/tests/ and edit them as needed.
