@@ -1,0 +1,16 @@
+# ClusterShell test configuration file
+# $Id$
+
+[CONFIG]
+
+# Simulate WAN-like topology
+#
+# NEIGHBOR: define only one neighbor node used as a gateway (NEIGHBOR
+# should be accessible from the testing node)
+NEIGHBOR=node32
+
+# GATEWAYS: define 1+ nodes accessible from NEIGHBOR
+GATEWAYS=node[34-35]
+
+# TARGETS: define 1+ nodes accessible from GATEWAYS
+TARGETS=node[36-37]
