@@ -1,3 +1,7 @@
+2011-01-26 S. Thiell <stephane.thiell@cea.fr>
+
+	* tests/config: test config-template directory created.
+
 2011-01-17 S. Thiell <stephane.thiell@cea.fr>
 
 	* Communication.py: New module from 2.0 dev branch (author: H. Doreau).
